# dune-demo

build-exec/: README.md  demo.t  dune-project
build-exec/lib/: dune
build-exec/test/: dune
ctypes-extra-include/: README.md  dune  dune-project  foo.ml  function_description.ml
dune-empty-stdout-error/: README.md  dune  dune-project
dune-rules-cram/: README.md  dune  dune-project  run.t
ocamlindex-nested/: README.md  README.t  dune-project
ocamlindex-nested/lib/: dune
ocamlindex-nested/nested-project/: dune-project
ocamlindex-nested/nested-project/lib/: dune
ocamlindex-nested/nested-project/test/: dune
ocamlindex-nested/test/: dune
